force-app/main/default/objects/Case_Goal__c/Case_Goal__c.object-meta.xml
<CustomObject>
    <description>An individual SMART goal under a Case_Plan__c. Tracks one specific objective (e.g., "Secure protective order by 2026-08-01") with progress status. Multiple goals per plan, organized by SSM domain.</description>
    <label>Case Goal</label>
    <nameField>
        <displayFormat>CG-{0000}</displayFormat>
        <label>Case Goal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>