force-app/main/default/objects/Case_Goal__c/fields/Achieved_Date__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Date__c</fullName>
    <description>When the goal was actually achieved. Set when Progress_Status moves to Achieved.</description>
    <label>Achieved Date</label>
    <type>Date</type>
</CustomField>