force-app/main/default/objects/Case_Goal__c/fields/Case_Plan__c.field-meta.xml
<CustomField>
    <fullName>Case_Plan__c</fullName>
    <description>Parent Case Plan. Master-detail — goals are deleted when the plan is.</description>
    <label>Case Plan</label>
    <referenceTo>Case_Plan__c</referenceTo>
    <relationshipLabel>Case Goals</relationshipLabel>
    <relationshipName>Case_Goals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>