force-app/main/default/objects/Case_Goal__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>Life-domain bucket. Matches the SSM domains so outcomes can be cross-correlated (planned goals vs SSM-measured progress).</description>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Employment / Income</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Substance Use</fullName>
            </value>
            <value>
                <fullName>Financial Literacy</fullName>
            </value>
            <value>
                <fullName>Family Support</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Health Coverage</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>