force-app/main/default/objects/Case_Goal__c/fields/Goal_Statement__c.field-meta.xml
<CustomField>
    <fullName>Goal_Statement__c</fullName>
    <description>The SMART goal in the survivor's own framing. Example: "Secure protective order by 2026-08-15."</description>
    <label>Goal Statement</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>