force-app/main/default/objects/Case_Goal__c/fields/Progress_Notes__c.field-meta.xml
<CustomField>
    <fullName>Progress_Notes__c</fullName>
    <description>What's happening on this goal. Updated during case reviews.</description>
    <label>Progress Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>