force-app/main/default/objects/Case_Goal__c/fields/Progress_Status__c.field-meta.xml
<CustomField>
    <fullName>Progress_Status__c</fullName>
    <description>Goal progress state. Driven by advocate updates during regular case reviews.</description>
    <label>Progress Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Achieved</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>