force-app/main/default/objects/Case_Goal__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <description>When the survivor wants to achieve this goal by. SMART criterion: time-bound.</description>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>